# cw_live_edit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  puzzle.db  schema_mod.sh  tailwind.config.js
.github/workflows/: docker-image.yml
puzzles/: 1.json
src/:    cookies.rs  crossword.rs  db.rs  echo.rs  lib.rs  main.rs  prune.rs  response.rs  websockets.rs
static/: crossword.css  crossword.html  crossword.js  dialog.js  input.css  styles.css
templates/: about.html  base.html  client_test.html  client_test_grid.html  crossword.html  foo.html  hello.html  index.html  index_content.html  login.html  signup.html
